--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,50 @@
+<!-- Getting Started ================================================== -->
 
-<h1>Overview</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<h2>Fuck You!</h2>
+<div class="container">
+  <div class="jumbotron">
+    <h1>Mark Schipper</h1>
+    <p>"Individual Expression + Selfless Collaboration = Design-Inspired Product Management"</p>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+
+    <aside class="col-md-3">
+      <div class="" role="complementary">
+        <ul class=" nav jack">
+
+          <li><a href="#overview">Overview</a></li>
+  				<li><a href="#summary">Summary</a></li>
+  				<li><a href="#employment">Employment</a></li>
+  				<li><a href="#education">Education</a></li>
+
+				</ul>
+			</div>
+		</aside>
+
+		<section class="col-md-9" role="main">
+  		<div class="bs-docs-section">
+
+    		<div class="page-header">
+      		<h1 id="overview">Overview</h1>
+					<p class="lead">A generalizing specialist, possessing a 'T-shaped' combination of skills and abilities in business, marketing, technology and learning.</p>
+				</div>
+
+				<div class="page-header">
+					<h1 id="summary">Summary</h1>
+				</div>
+
+				<div class="page-header">
+					<h1 id="employment">Employment</h1>
+				</div>
+
+				<div class="page-header">
+					<h1 id="education">Education</h1>
+				</div>
+
+			</div>
+		</section>
+
+	</div>
+</div>
