--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,29 @@
+<!-- Site ======================================================= -->
+
 <% provide(:title, 'Schipperius Infographic') %>
 
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 
 <head>
-
-  <title> <%= yield(:title) %></title>
-
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-
+	<%= render 'layouts/head' %>
 </head>
 
 <body>
 
-<%= yield %>
+	<header class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<%= render 'layouts/header' %>
+	</header>
+
+	<main class="container" role="main">
+    <%= yield %>
+  </main>
+
+  <footer>
+		<%= render 'layouts/footer' %>
+		<%= render 'layouts/foot' %>
+	</footer>
 
 </body>
 
