add summary charts.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <!-- Site Footer ======================================================= -->
 
-<div id="footer" class="footer navbar navbar-fixed-bottom hidden-phone">
+<div id="footer" class="footer navbar navbar-fixed-bottom">
   <div class="navbar-inner">
     <div class="container">
       <ul class="nav pull-right">
-        <li><a href="/integrate">&copy; <%= Date.today.year %> Integrate Design Studio</a></li>
+        <li>&copy; <%= Date.today.year %> Integrate Design Studio</li>
       </ul>
     </div>
   </div>
