--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<!-- Getting Started ================================================== -->
+<!-- Home ================================================== -->
 
 <div class="container">
   <div class="jumbotron">
@@ -12,7 +12,7 @@
 
     <aside class="col-md-3">
       <div class="" role="complementary">
-        <ul class=" nav jack">
+        <ul class="nav">
 
           <li><a href="#overview">Overview</a></li>
   				<li><a href="#summary">Summary</a></li>
@@ -28,11 +28,22 @@
 
     		<div class="page-header">
       		<h1 id="overview">Overview</h1>
-					<p class="lead">A generalizing specialist, possessing a 'T-shaped' combination of skills and abilities in business, marketing, technology and learning.</p>
-				</div>
+									</div>
+
 
 				<div class="page-header">
 					<h1 id="summary">Summary</h1>
+					<p class="lead">A generalizing specialist, possessing a 'T-shaped' combination of skills and abilities in business, marketing, technology and learning.</p>
+
+					<div class="tabbable tabs-below">
+					  <ul class="nav nav-stacked">
+					    <li class="active"><a href="#tab1" data-toggle="tab">Business Strategy and Tactics</a></li>
+					    <li><a href="#tab2" data-toggle="tab">Product Marketing</a></li>
+					    <li><a href="#tab3" data-toggle="tab">Website Architecture</a></li>
+					    <li><a href="#tab4" data-toggle="tab">Learning and Development</a></li>
+					  </ul>
+					</div>
+					<%= render 'pages/summary' %>
 				</div>
 
 				<div class="page-header">
