--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,3 +1,4 @@
+<!-- Site Head ======================================================= -->
 <title> <%= yield(:title) %></title>
 
  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
