--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 	<%= render 'layouts/head' %>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#sidebar">
 
 	<header class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<%= render 'layouts/header' %>
