--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <!-- Site Footer ======================================================= -->
 
-<div id="footer" class="footer navbar navbar-fixed-bottom">
+<div id="footer" class="navbar navbar-default navbar-fixed-bottom">
   <div class="navbar-inner">
     <div class="container">
       <ul class="nav pull-right">
