begin adding content.

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -10,6 +10,9 @@
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
 
+<!--Load the AJAX API-->
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+
 <script type="text/javascript" src="https://www.google.com/jsapi?autoload={'modules':[{'name':'visualization',
-       'version':'1','packages':['timeline']}]}"></script>
+       'version':'1','packages':['timeline']}]}">
+</script>
