debugging asset pipeline, remove images.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
 <body data-spy="scroll" data-target="#sidebar">
 
-	<header class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<header role="navigation">
 		<%= render 'layouts/header' %>
 	</header>
 
