--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,8 +29,7 @@
           <li class="active"><a href="#overview">Hybrid Professional</a></li>
   				<li><a href="#summary">Specializing Generalist</a></li>
   				<li><a href="#knowledge">Knowledge and Skills Stack</a></li>
-  				<li><a href="#skills">Skills</a></li>
-  				<li><a href="#employment">Employment</a></li>
+  				<li><a href="#employment">Senior Product Manager</a></li>
   				<li><a href="#education">Learning Paths</a></li>
 
 				</ul>
@@ -58,42 +57,60 @@
 				</div>
 
 				<div class="page-header">
-					<h1 id="knowledge">Knowledge Stack</h1>
+					<h1 id="knowledge">Knowledge <small>Stack</small></h1>
 				</div>
+
 				<div class="tabbable tabs-below">
-				  <ul class="nav nav-stacked">
-				    <li class="active"><a href="#tab1" data-toggle="tab">Business Strategy and Tactics</a></li>
-				    <li><a href="#tab2" data-toggle="tab">Product Marketing</a></li>
-				    <li><a href="#tab3" data-toggle="tab">Website Architecture</a></li>
-				    <li><a href="#tab4" data-toggle="tab">Learning and Development</a></li>
+				  <ul class="nav nav-pills">
+				    <li class="active"><a href="#tab1" data-toggle="tab">Business</a></li>
+				    <li><a href="#tab2" data-toggle="tab">Marketing</a></li>
+				    <li><a href="#tab3" data-toggle="tab">Technology</a></li>
+				    <li><a href="#tab4" data-toggle="tab">Learning</a></li>
 				  </ul>
 				</div>
 
 				<div class="row">
-  				<div class="col-md-12">
+  				<div class="col-lg-12">
     				<a class="thumbnail">
-      				<%= render 'pages/summary' %>
+      				<%= render 'pages/knowledge' %>
     				</a>
   				</div>
 				</div>
 
 				<div class="page-header">
-      		<h1 id="skills">Skills<small> Subtext for header</small></h1>
-      		<p class="lead"></p>
+      		<h1 id="skills">Skills <small>Stack</small></h1>
       	</div>
 
+      	<div class="tabbable tabs-below">
+				  <ul class="nav nav-pills">
+				    <li class="active"><a href="#tab11" data-toggle="tab">Ideas</a></li>
+				    <li><a href="#tab12" data-toggle="tab">People</a></li>
+				    <li><a href="#tab13" data-toggle="tab">Things</a></li>
+				  </ul>
+				</div>
+
+				<div class="row">
+  				<div class="col-lg-12">
+    				<a class="thumbnail">
+      				<%= render 'pages/knowledge' %>
+    				</a>
+  				</div>
+				</div>
+
+      	<div>
+					<%= render 'pages/skills' %>
+				</div>
 
 				<div class="page-header">
-					<h1 id="employment">Employment</h1>
-					<p class="lead">A senior product manager with 24 years of experience in the education sector.</p>
+					<h1 id="employment">Senior Product Manager <small></h1>
+					<p class="lead">with 24 years experience in the education industry in both public and private enviroments.</p>
 				</div>
 				<div>
 					<%= render 'pages/employment' %>
 				</div>
 
 				<div class="page-header">
-					<h1 id="education">Education <small>The Pursuit of Lifelong Learning</small></h1>
-					<p class="lead">Both my formal and informal learning has always centered upon the 'Interrelatedness of Things'. Not just people, process, technology and information, but also science, </p>
+					<h1 id="education">Learning Paths <small>In the Pursuit of Lifelong Learning</small></h1>
 				</div>
 
 				<div class="row">
