Fix navigation links.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,13 @@
-<!-- Site ======================================================= -->
-
 <% provide(:title, 'Schipperius Infographic') %>
-
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
 	<%= render 'layouts/head' %>
 </head>
 
-<body data-spy="scroll" data-target="#sidebar">
-
-	<header role="navigation">
+<body data-spy="scroll" data-target="#sidebar" id="#home">
+	<header>
 		<%= render 'layouts/header' %>
 	</header>
 
@@ -24,7 +19,5 @@
 		<%= render 'layouts/footer' %>
 		<%= render 'layouts/foot' %>
 	</footer>
-
 </body>
-
 </html>
