--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,5 @@
-<!-- Home ================================================== -->
-
-<div class="jumbotron">
-  <div class="container">
+<div class="container">
+	<div class="row jumbotron">
 
     <div class="col-md-3">
     	<a class="thumbnail">
@@ -11,9 +9,7 @@
 
   	<div class="col-md-9">
   		<h1>Mark Schipper</h1>
-    	<blockquote class="pull-right">
-    		<p>Individual expression and selfless collaboration creates design-inspired product marketing and development.</p>
-    	</blockquote>
+    	<blockquote class="pull-right"><p>Individual expression and selfless collaboration creates design-inspired product marketing and development.</p></blockquote>
     </div>
 
   </div>
@@ -22,26 +18,23 @@
 <div class="container">
   <div class="row">
 
-    <aside class="col-md-3">
-      <div class="list-group navbar" id="sidebar" role="complementary">
-        <ul class="well nav" id="mynav" data-spy="affix" data-offset-top="280">
+    <nav class="col-md-3" role="navigation">
+      <ul class="nav navbar well" id="mynav" data-spy="affix" data-offset-top="280">
+        <li class="active"><a href="#overview">Forward-Thinking</a></li>
+				<li><a href="#summary">Specializing Generalist</a></li>
+				<li><a href="#knowledge">Knowledge and Skills Stack</a></li>
+				<li><a href="#employment">Senior Product Manager</a></li>
+				<li><a href="#education">Learning Paths</a></li>
+			</ul>
+		</nav>
 
-          <li class="active"><a href="#overview">Hybrid Professional</a></li>
-  				<li><a href="#summary">Specializing Generalist</a></li>
-  				<li><a href="#knowledge">Knowledge and Skills Stack</a></li>
-  				<li><a href="#employment">Senior Product Manager</a></li>
-  				<li><a href="#education">Learning Paths</a></li>
-
-				</ul>
-			</div>
-		</aside>
-
-		<section class="col-md-9" role="main">
-  		<div class="">
+		<section class="col-md-9">
 
     		<div class="page-header">
-      		<h1 id="overview">Hybrid Professional<small> with a combination</small></h1>
-      		<p class="lead"></p>
+      		<h1 id="overview">Forward-Thinking<small> evangelist that get’s things done.</small></h1>
+      	</div>
+      	<div>
+      		<p class="lead">A hybrid professional that performs across multiple disciplines, highly proficient, envisioning on a strategic level, executing on the tactical level, driving business value.</p>
       	</div>
 
      		<div class="page-header">
@@ -110,7 +103,7 @@
 				</div>
 
 				<div class="page-header">
-					<h1 id="education">Learning Paths <small>In the Pursuit of Lifelong Learning</small></h1>
+					<h1 id="education">Learning Paths <small>The Pursuit of Lifelong Learning</small></h1>
 				</div>
 
 				<div class="row">
@@ -121,7 +114,6 @@
   				</div>
 				</div>
 
-			</div>
 		</section>
 
 	</div>
