--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,4 @@
-<!-- Site Footer ======================================================= -->
-
-<div id="footer" class="navbar navbar-default navbar-fixed-bottom">
+<div class="navbar navbar-default navbar-fixed-bottom">
   <div class="navbar-inner">
     <div class="container">
       <ul class="nav pull-right">
