--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,8 +16,8 @@
 
 	<div class="row"><!-- start second row -->
 
-	  <div class="col-md-3 well">
-      <ul class="nav navbar" id="mynav">
+	  <div class="col-md-3">
+      <ul class="nav well">
         <li><a href="#overview">Forward-Thinking</a></li>
 				<li><a href="#summary">Specializing Generalist</a></li>
 				<li><a href="#knowledge">Knowledge and Skills Stack</a></li>
