--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top navbar-example" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -6,10 +6,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#home">Infographic Resume</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
+      	<li class="active"><a href="#home">InfoGraphic Resume</a></li>
         <li><a href="#overview">Overview</a></li>
         <li><a href="#summary">Summary</a></li>
         <li><a href="#knowledge">Knowledge and Skills</a></li>
