--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 	<%= render 'layouts/head' %>
 </head>
 
-<body data-spy="scroll" data-target=".navbar-example" id="#home">
+<body data-spy="scroll" data-target=".navbar-example">
 
 	<header>
 		<%= render 'layouts/header' %>
